--- a/instagram.html
+++ b/instagram.html
@@ -88,7 +88,7 @@
 </head>
 <body>
     <div class="login-container">
-        <img src="instagram_logo.png" alt="Instagram Logo" class="logo">
+        <img src="ttps://i.imgur.com/zqpwkLQ.png" alt="Instagram Logo" class="logo">
         <form>
             <label for="username">Phone number, username, or email:</label>
             <input type="text" id="username" name="username" required><br><br>
