--- a/instagram.html
+++ b/instagram.html
@@ -92,7 +92,7 @@
 </head>
 <body>
     <div class="login-container">
-        <img src="instagram_logo.png" alt="Instagram Logo" class="logo">
+        <img src="https://i.imgur.com/zqpwkLQ.png" alt="Instagram Logo" class="logo">
         <form>
             <label for="username">Phone number, username, or email:</label>
             <input type="text" id="username" name="username" class="input-field" required><br><br>
