--- a/instagram.html
+++ b/instagram.html
@@ -4,14 +4,14 @@
     <title>Instagram Login</title>
     <style>
         body {
-            background-color: #ff9ec1;
+            background-color: #fff;
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
         }
 
         .login-container {
-            max-width: 350px;
+            max-width: 400px;
             margin: 100px auto;
             padding: 20px;
             background-color: #fff;
