--- a/instagram.html
+++ b/instagram.html
@@ -4,14 +4,17 @@
     <title>Instagram Login</title>
     <style>
         body {
-            background-color: #fff;
+            <img src="https://i.imgur.com/zqpwkLQ.png" alt="Instagram Logo" class="logo">
+
+            background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcStWe9j-Tiic2SnB_552rr0mSI-oICZaGKm8JPsVpTU&s');
+            background-size: cover;
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
         }
 
         .login-container {
-            max-width: 400px;
+            max-width: 350px;
             margin: 100px auto;
             padding: 20px;
             background-color: #fff;
@@ -92,7 +95,7 @@
 </head>
 <body>
     <div class="login-container">
-        <img src="https://i.imgur.com/zqpwkLQ.png" alt="Instagram Logo" class="logo">
+        <img src="instagram_logo.png" alt="Instagram Logo" class="logo">
         <form>
             <label for="username">Phone number, username, or email:</label>
             <input type="text" id="username" name="username" class="input-field" required><br><br>
@@ -100,7 +103,7 @@
             <input type="password" id="password" name="password" class="input-field" required><br><br>
             <input type="button" value="Log In" onclick="unleashTheKraken()" class="login-button">
         </form>
-        <p class="forgot-password">Forgot password?</p>
+        <p class="forgot-password">Forgot your password? <a href="#">Reset it here</a></p>
         <p class="signup-link">Don't have an account? <a href="#">Sign up</a></p>
     </div>
 </body>
