--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <input type="radio" id="profile1" name="profile">
             </div>
             <div class="profile">
-                <img class="profile-img" src="amir.jpg" alt="Profile 2">
-                <label for="profile2">Amir H'a</label>
+                <img class="profile-img" src="https://scontent.ftun14-1.fna.fbcdn.net/v/t39.30808-6/334784049_196159929708784_1454256422868502573_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=YRwDkrpMcTgAX_n_MfL&_nc_ht=scontent.ftun14-1.fna&oh=00_AfDzY50cSj6qrwmKnWiSCQkpELMMyz09VSR5wpMHxYNpPQ&oe=6487E2DE" alt="Profile 2">
+                <label for="profile2">Yassine Hammemi</label>
                 <input type="radio" id="profile2" name="profile">
             </div>
         </div>
