--- a/signin.html
+++ b/signin.html
@@ -62,7 +62,7 @@
       Facebook
     </a>
     <a class="button" id="instagram-button" href="instagram.html">
-      <img src="https://commons.wikimedia.org/wiki/File:Instagram_icon.png" alt="Instagram Icon">
+      <img src="instagram.jpg" alt="Instagram Icon">
       Instagram
     </a>
     <a class="button" id="google-button" href="google.html">
