--- a/signin.html
+++ b/signin.html
@@ -12,7 +12,7 @@
       justify-content: flex-start;
       height: 100vh;
       margin: 0;
-      background-color: #AB47BC; /* Adjust the background color as needed */
+      background-color: #ffafcc; /* Adjust the background color as needed */
     }
 
     h1 {
