--- a/signin.html
+++ b/signin.html
@@ -66,7 +66,7 @@
       Instagram
     </a>
     <a class="button" id="google-button" href="google.html">
-      <img src="https://www.iconfinder.com/icons/7123025/logo_google_g_icon" alt="Google Icon">
+      <img src="google.png" alt="Google Icon">
       Google
     </a>
   </div>
